--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pydantic-extra-types==2.8.1
 pydantic-settings==2.3.3
 pydantic_core==2.18.4
 Pygments==2.18.0
+PyMySQL==1.1.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
