--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,19 @@
-annotated-types==0.7.0
-anyio==4.4.0
-certifi==2024.6.2
-click==8.1.7
-colorama==0.4.6
-dnspython==2.6.1
-email_validator==2.1.1
-fastapi==0.111.0
-fastapi-cli==0.0.4
-greenlet==3.0.3
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-orjson==3.10.5
-pydantic==2.7.4
-pydantic-extra-types==2.8.1
-pydantic-settings==2.3.3
-pydantic_core==2.18.4
-Pygments==2.18.0
-PyMySQL==1.1.1
-python-dotenv==1.0.1
-python-multipart==0.0.9
-PyYAML==6.0.1
-rich==13.7.1
-shellingham==1.5.4
-sniffio==1.3.1
-SQLAlchemy==2.0.30
-starlette==0.37.2
-typer==0.12.3
-typing_extensions==4.12.2
-ujson==5.10.0
-uvicorn==0.30.1
-watchfiles==0.22.0
-websockets==12.0
+asgiref==3.7.2
+certifi==2023.7.22
+cffi==1.16.0
+cryptography==42.0.8
+distlib==0.3.7
+filelock==3.13.1
+MouseInfo==0.1.3
+pipenv==2023.10.24
+platformdirs==3.11.0
+pycparser==2.22
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+PyScreeze==0.1.30
+pytweening==1.0.7
+setuptools==69.0.2
+tzdata==2023.3
+virtualenv==20.24.7
